added working base structure and first part of scenario for purchase the product